--- a/Style.css
+++ b/Style.css
@@ -16,6 +16,9 @@
       left: 30px;
   }
   .body img {
-      width:100px;
-      width:100px;
+      position: relative;
+      top: 18px;
+      left: 30px;
+      width: 100px;
+      width: 100px;
   }
