--- a/Style.css
+++ b/Style.css
@@ -17,8 +17,8 @@
   }
   .body img {
       position: relative;
-      top: 18px;
+      top: 20px;
       left: 30px;
-      width: 100px;
-      width: 100px;
+      width: 300px;
+      height: 300px;
   }
